--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<div class="col-md-12">
 				<p>Sorry Guys...</p>
 				<p>It's just a click bait</p>
-				<p>Just say "HAPPY BIRTHDAY"</p>
+				<p>Just say a "HAPPY BIRTHDAY"</p>
 				
 				<p> To <strong>PRITHIV.</strong></p>
 				<p>Thanks for lighting the candles!</p>
